# tqk-llm

./: .gitignore  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  verify_quality.py
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
experiments/: colab_mvp.ipynb  real_benchmark.py
results/: real_benchmark.json
scripts/: benchmark_utility.py  launch_verification.py
tests/: test_benchmark_cli.py  test_tqk.py
tqk/: __init__.py  benchmark.py  cli.py  extractor.py  format.py  projector.py  turboquant_bridge.py  validator.py
