[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tqk"
version = "0.0.1"
description = "Portable memory format for large language models"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26",
    "safetensors>=0.4",
]

[project.optional-dependencies]
turboquant = ["turboquant-moe>=0.3.0"]
transformers = ["transformers>=4.40.0"]
all = ["turboquant-moe>=0.3.0", "transformers>=4.40.0"]
dev = ["pytest>=7.4", "ruff>=0.3", "mypy>=1.8"]

[project.scripts]
tqk = "tqk.cli:main"

[project.urls]
Homepage = "https://github.com/RemizovDenis/tqk"
Repository = "https://github.com/RemizovDenis/tqk"
